# freqtrade-strategies

./: pyproject.toml
configs/: config-api-server-sample.json  config-binance-spot-common.json  config-telegram-sample.json  pairlist-binance-usdt-spot.json
strategies/ichiV1_Marius/: ichiV1_Marius.py
