[tool.poetry]
name = "freqtrade-strategies"
version = "0.1.0"
description = ""
authors = ["James Chu <moon.ghost.jian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
freqtrade = "^2024.3"
scikit-optimize = "^0.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
